//
// Copyright (C) 2018 The Android Open Source Project
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//

syntax = "proto3";

package textclassifier.tcs;

option java_package = "com.android.textclassifier";
option java_multiple_files = true;

// Manifest for a download task.
message ModelManifest {
  message Model {
    string url = 1;
    int64 size_in_bytes = 2;
    string fingerprint = 3;
  }
  // All models to download in this task. Currently the size is always one.
  repeated Model models = 1;
  // Consistent with androidx.work.NetworkType.
  enum NetworkType {
    UNMETERED = 0;
    METERED = 1;
    NOT_REQUIRED = 2;
    NOT_ROAMING = 3;
    CONNECTED = 4;
  }
  NetworkType required_network_type = 2;
  bool requires_battery_not_low = 3;
  bool requires_charging = 4;
  bool requires_device_idle = 5;
  bool requires_storage_not_low = 6;
}
